css/style.css
body{
	font-family: helvetica;
	background-image: url("../images/background.jpg");
	background-size:cover;
}


#navigation{
	background-color: white;
	width: 200px;
	border-radius: 5px;
	height:40px;
	text-align:center;
	margin-bottom: 30px;
	font-weight: bold;
	text-decoration: none;
}

#social{
	font-weight: bold;
	color: #2A458F;
}

h1{
	color:#0A1F5A;
}

.image{
	float: right;
	width: 200px;
	border-radius: 110px;
	border: 10px solid #677CB6;
}

nav{
	text-align: center;
	padding-top: 20px;
	margin: 20px auto;
}

h2{
	text-transform: uppercase;
	color: #677CB6;
}

h3{
	text-transform: uppercase;
	color: #677CB6;
}

#blockquote{
	 background: #677CB6;
	 color:white;
     border-left: 10px solid #0A1F5A;
     margin: 1.5em 10px;
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
     width: 500px;
     margin-left: 0px;
     border-radius: 10px;
}

#container{
	width: 800px;
	height: 250px;
	background-color: white;
	border-radius: 10px;
	padding-left: 50px;
	padding-top: 50px;
	padding-bottom: 20px;
	padding-right: 50px;
	border-top: 0px;
	border-bottom: 0px;
	opacity: 0.97;
	margin: 0 auto;
}

#experience{
	width: 800px;
	height: 1200;
	background-color: white;
	border-radius: 10px;
	padding-left: 50px;
	padding-top: 50px;
	padding-bottom: 20px;
	padding-right: 50px;
	border-top: 0px;
	border-bottom: 0px;
	opacity: 0.97;
	margin:20px auto;
}

#education{
	width: 800px;
	background-color: white;
	border-radius: 10px;
	padding-left: 50px;
	padding-top: 50px;
	padding-bottom: 20px;
	padding-right: 50px;
	border-top: 0px;
	border-bottom: 0px;
	opacity: 0.97;
	margin: 20px auto;
}

.work{
	width: 600px;
	border-radius: 20px;
	border: 10px solid #677CB6;
}

a{
	color:#2A458F;
	text-decoration: none;
}

a:link {
    text-decoration: underline;
    color: #2A458F;
}

a:hover {
    color: #677CB6;
    text-decoration: underline;
}

a:active {
    color: black;
    text-decoration: none;
}

